--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "webpack-serve": "^0.3.1"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.110",
+    "lodash.debounce": "^4.0.8",
+    "ts-debounce": "^0.3.2",
     "tslib": "^1.9.0"
   },
   "engines": {
