--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es5",
     "importHelpers": true,
-    "strict": true,
+    "strict": false,
+    "strictNullChecks": false,
     "noEmitHelpers": true,
     "sourceMap": true,
     "lib": [
