--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest-environment-node-debug": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "prettier": "^1.11.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
@@ -34,6 +35,7 @@
     "tslint-config-prettier": "^1.10.0",
     "tslint-loader": "^3.6.0",
     "typescript": "^2.8.1",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-serve": "^0.3.1"
