--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tslint-loader": "^3.6.0",
     "typescript": "^2.8.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-serve": "^0.3.1"
